# LDmicroQt

./: .gitignore  README.md
ldmicro/: CMakeLists.txt  LDMicro.desktop  ansic.cpp  arduino.cpp  avr.cpp  circuit.cpp  coildialog.cpp  commentdialog.cpp  compilecommon.cpp  confdialog.cpp  contactsdialog.cpp  draw.cpp  draw_outputdev.cpp  helpdialog.cpp  intcode.cpp  interpreted.cpp  iolist.cpp  lang.cpp  ldinterpret.c  ldmicro.cpp  ldmicro.qrc  loadsave.cpp  lutdialog.cpp  maincontrols.cpp  miscutil.cpp  pic16.cpp  resetdialog.cpp  schematic.cpp  simpledialog.cpp  simulate.cpp  toolbar.cpp  undoredo.cpp
ldmicro/applications/: LDMicro.desktop  ldmicro.desktop
ldmicro/includes/: ldmicro.h  ldmicroVC.h  ldmicroVC.h.in  toolbar.h
ldmicro/lib/freezeLD/: CMakeLists.txt  freezeLD.cpp  freezeLD.h
ldmicro/lib/linuxUI/: CMakeLists.txt  linuxLD.cpp  linuxLD.h  linuxUI.cpp  linuxUI.h
ldmicro/reg/: run-tests.pl
